automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1131,18 +1131,18 @@
      "data": {
       "text/plain": [
        "['Pyeongchang',\n",
-       " 'Salina Island',\n",
-       " 'Los Cabos',\n",
-       " 'Iguazu Falls',\n",
-       " 'Archipelago Sea',\n",
-       " 'Toronto',\n",
-       " 'Buenos Aires',\n",
        " 'San Antonio',\n",
-       " 'Greenville',\n",
-       " 'Albuquerque',\n",
+       " 'Buenos Aires',\n",
        " 'Walla Walla Valley',\n",
+       " 'Greenville',\n",
+       " 'Los Cabos',\n",
        " 'Marakesh',\n",
-       " 'Solta']"
+       " 'Toronto',\n",
+       " 'Salina Island',\n",
+       " 'Archipelago Sea',\n",
+       " 'Solta',\n",
+       " 'Iguazu Falls',\n",
+       " 'Albuquerque']"
       ]
      },
      "execution_count": 37,
