automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1261,6 +1261,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(top_)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
